# mltiny

./: .gitattributes  .gitignore  analyze_performance.ipynb  ble.resc  features  goals.txt  readme.md  readme.txt  requirements.txt  zephyr-ble-beacon.elf  zephyr-ble-peripheral_hr.elf
models/: RandomForestRegressor.h
zephyrproject/zephyr/samples/bluetooth/central_hr/: CMakeLists.txt  prj.conf
zephyrproject/zephyr/samples/bluetooth/central_hr/src/: main.c  model.h
zephyrproject/zephyr/samples/bluetooth/central_hr/src/CMSIS/DSP/Source/: CMakeLists.txt
zephyrproject/zephyr/samples/bluetooth/central_hr/src/CMSIS/NN/: CMakeLists.txt
zephyrproject/zephyr/samples/bluetooth/central_hr/src/TinyEngine/Source/: convolve_1x1_s8_oddch_fpreq.c  convolve_s8_kernel3_stride1_pad1_fpreq.c
zephyrproject/zephyr/samples/bluetooth/central_hr/src/TinyEngine/src/kernels/fp_requantize_op/: convolve_s8_kernel3_stride1_pad1_fpreq.c
zephyrproject/zephyr/samples/bluetooth/central_hr/src/codegen/Source/: genModel.c
zephyrproject/zephyr/samples/bluetooth/central_hr/src/ml_models/: LinearRegression().h  XGBRegressor.h  weights.h
zephyrproject/zephyr/samples/bluetooth/central_hr/src/ml_models/multichannel/: LinearRegression().h  RandomForestRegressor(n_estimators=10).h  SVR().h  XGBRegressor.h
zephyrproject/zephyr/samples/bluetooth/central_hr/src/ml_models/singlechannel/: DecisionTreeRegressor().h  LinearRegression().h  RandomForestRegressor(n_estimators=10).h  XGBRegressor.h
zephyrproject/zephyr/samples/bluetooth/central_hr/src/nnom/src/core/: Untitled-1.txt
zephyrproject/zephyr/samples/bluetooth/peripheral_hr/: prj.conf  prj_minimal.conf
zephyrproject/zephyr/samples/bluetooth/peripheral_hr/src/: main.c
zephyrproject/zephyr/subsys/bluetooth/services/: hrs.c
